--- a/xmpp.adoc
+++ b/xmpp.adoc
@@ -1,10 +1,10 @@
 = XMPP
 
-Version: 1.0.0.5
+Version: 1.0.0.6
 
 
 You can also find my keys on my https://inferencium.net/key[website] and https://codeberg.org/inference/key[Codeberg] in
-order to check for discrepencies between the keys.
+order to check for discrepancies between the keys.
 
 
 Whenever possible, open the links to pin the fingerprints directly from this file. If that is not possible, manually
