--- a/ssh.adoc
+++ b/ssh.adoc
@@ -1,6 +1,6 @@
 = SSH
 
-Version: 1.1.0.7
+Version: 1.1.0.8
 
 
 You can also find my keys on my https://inferencium.net/key[website] and
@@ -17,11 +17,11 @@ Current SSH key:
 
 === Fingerprint
 
-SHA256:FtEVfx1CmTKMy40VwZvF4k+3TC+QhCWy+EmPRg50Nnc
+`SHA256:FtEVfx1CmTKMy40VwZvF4k+3TC+QhCWy+EmPRg50Nnc`
 
 === Key
 
-ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAILHPGnrIg7dI7GUqA+lTztJSrn+7QyRceajqs4iaU8UG
+`ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAILHPGnrIg7dI7GUqA+lTztJSrn+7QyRceajqs4iaU8UG`
 
 Legacy SSH keys:
 
@@ -29,8 +29,8 @@ Legacy SSH keys:
 
 === Fingerprint
 
-SHA256:9Pl0nZ2UJacgm+IeEtLSZ4FOESgP1eKCtRflfPfdX9M
+`SHA256:9Pl0nZ2UJacgm+IeEtLSZ4FOESgP1eKCtRflfPfdX9M`
 
 === Key
 
-ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAINs8UH2hVmNSg0qKig/9ZQt07IuOHsorRfw1doEgMuJ8
+`ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAINs8UH2hVmNSg0qKig/9ZQt07IuOHsorRfw1doEgMuJ8`
