--- a/ssh.adoc
+++ b/ssh.adoc
@@ -1,6 +1,6 @@
 = SSH
 
-Version: 1.1.0.8
+Version: 1.1.0.9
 
 
 You can also find my keys on my https://inferencium.net/key[website] and
@@ -11,26 +11,26 @@ Each SSH key is signed by the previous key, allowing verification of the chain o
 trust.
 
 
-Current SSH key:
+== Current SSH key
 
-== #1 (Used from 2023-07-27)
+=== #1 (Used from 2023-07-27)
 
-=== Fingerprint
+==== Fingerprint
 
 `SHA256:FtEVfx1CmTKMy40VwZvF4k+3TC+QhCWy+EmPRg50Nnc`
 
-=== Key
+==== Key
 
 `ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAILHPGnrIg7dI7GUqA+lTztJSrn+7QyRceajqs4iaU8UG`
 
-Legacy SSH keys:
+== Legacy SSH keys
 
-== #0 (Used between 2023-01-01 - 2023-07-27)
+=== #0 (Used between 2023-01-01 - 2023-07-27)
 
-=== Fingerprint
+==== Fingerprint
 
 `SHA256:9Pl0nZ2UJacgm+IeEtLSZ4FOESgP1eKCtRflfPfdX9M`
 
-=== Key
+==== Key
 
 `ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAINs8UH2hVmNSg0qKig/9ZQt07IuOHsorRfw1doEgMuJ8`
