--- a/ssh.adoc
+++ b/ssh.adoc
@@ -1,6 +1,6 @@
 = SSH
 
-Version: 1.1.0.9
+Version: 1.1.0.10
 
 
 You can also find my keys on my https://inferencium.net/key[website] and
@@ -11,7 +11,7 @@ Each SSH key is signed by the previous key, allowing verification of the chain o
 trust.
 
 
-== Current SSH key
+== Current SSH Key
 
 === #1 (Used from 2023-07-27)
 
@@ -23,7 +23,7 @@ trust.
 
 `ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAILHPGnrIg7dI7GUqA+lTztJSrn+7QyRceajqs4iaU8UG`
 
-== Legacy SSH keys
+== Legacy SSH Keys
 
 === #0 (Used between 2023-01-01 - 2023-07-27)
 
